(add new changes on top of this file)

Änderungen
----------

v0.9.15 (?.05.2011)
 * External DB integration started
 * PageBrowser: Offset will be never lower than 0

v0.9.14 (26.05.2011)
 * tx_rnbase_configurations::get(): option $deep fixed to keep former behavier.

v0.9.13 (21.05.2011)
 * tx_rnbase: Class loader supports extbase classes.
 * New DB operator constants OP_NOTIN and OP_NOTIN_SQL
 * New base class for services tx_rnbase_sv1_Base
 * New view class for list views: tx_rnbase_views_List
 * util_SearchBase: method getWrapperClass is now public
 * tx_rnbase_util_DB::getRecord() checks for TCA configuration of table
 * tx_rnbase_configurations::get(): option $deep reimplemented. Should work now.
 * SimpleMarker can render simple links configured by Typoscript

v0.9.12 (02.05.2011) (not released)
 * model_base: Magic method __call implemented to support FLUID. Thanks to Stephan Reuther!
 * action_BaseIOC: It is possible to set view class by Typoscript. Thanks to Stephan Reuther!

v0.9.11 (01.04.2011) (not released)
 * PageBrowser: Handle pointers out of listsize
 * BaseView: Render PLUGIN_ before CallModules
 * tx_rnbase_util_Files: new method makeZipFile

v0.9.9 (17.03.2011) (not released)
 * FormTool: Some new Buttons. Thanks to Michael Wagner
 * StartValue for totalline-Marker is configureable


v0.9.8 (24.02.2011)
 * tx_rnbase_util_TYPO3: new check methods for TYPO3 versions 4.4 and 4.5
 * tx_rnbase_model_base: fetch single record in default constructor with respect of hidden and deleted flags
 * tx_rnbase_Parameters: Accessing parameters from other extensions is possible. New method getAll().
 * tx_rnbase_util_Dates::datetime_mysql2timestamp() with timezone support
 * tx_rnbase_util_Misc new method getPidList()

v0.9.7 (04.01.2011)
 * New class tx_rnbase_util_Strings

v0.9.6 (27.12.2010)
 * Bugfix in tx_rnbase_util_DB::searchWhere: it is possible to test joined values against 0
 * tx_rnbase_util_DB: new methods enableFields() and doQuery()